trying to fix modal showing briefly on mobile before it hides

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -153,52 +153,52 @@ body h6{
 
 }
 
-.animate-switch-container.right .animate-switch.ng-enter{
+.animate-switch-container .animate-switch.right.ng-enter{
     opacity: 0;
     left: 1024px;
     width: 100%;
 }
 
-.animate-switch-container.right .animate-switch.ng-enter.ng-enter-active{
+.animate-switch-container .animate-switch.right.ng-enter.ng-enter-active{
     left: 0;
     opacity: 1;
 }
 
-.animate-switch-container.right .animate-switch.ng-leave{
+.animate-switch-container .animate-switch.right.ng-leave{
     opacity: 1;
     left: 0;
 }
 
-.animate-switch-container.right .animate-switch.ng-leave.ng-leave-active{
+.animate-switch-container .animate-switch.right.ng-leave.ng-leave-active{
     left: -1024px;
     right: 1024px;
     opacity: 0;
 }
 
 
-.animate-switch-container.left .animate-switch.ng-enter{
+.animate-switch-container .animate-switch.left.ng-enter{
     opacity: 0;
     left: -1024px;
     width: 100%;
 }
 
-.animate-switch-container.left .animate-switch.ng-enter.ng-enter-active{
+.animate-switch-container .animate-switch.left.ng-enter.ng-enter-active{
     left: 0;
     opacity: 1;
 }
 
-.animate-switch-container.left .animate-switch.ng-leave{
+.animate-switch-container .animate-switch.left.ng-leave{
     opacity: 1;
     left: 0;
 }
 
-.animate-switch-container.left .animate-switch.ng-leave.ng-leave-active{
+.animate-switch-container .animate-switch.left.ng-leave.ng-leave-active{
     left: 1024px;
     right: -1024px;
     opacity: 0;
 }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 634em) {
 
     .animate-switch-container.right .animate-switch.ng-enter{
         opacity: 0;
